fix(styles): fix "Sign out" button width on mobile, secondary buttons

--- a/app/styles/modules/_settings.scss
+++ b/app/styles/modules/_settings.scss
@@ -88,6 +88,7 @@ body.settings #main-content.card {
 
   .settings-button {
     height: 30px;
+    width: 29%;
 
     html[dir='ltr'] & {
       float: right;
